--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: #222;
+}
+
+body::-webkit-scrollbar {
+  width: 10px;
+  height: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #222;
+  border-radius: 4px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background: #444444;
+  box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 code {
